<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<HorizontalScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_marginBottom="50dip" android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">

				<TextView android:text="@string/item" android:layout_width="100dip"
					android:layout_height="wrap_content" android:gravity="center"
					android:textSize="25dp" />

				<TextView android:text="@string/consumer"
					android:layout_width="100dip" android:layout_height="wrap_content"
					android:gravity="center" android:textSize="25dp" />

				<TextView android:text="@string/amount"
					android:layout_width="100dip" android:layout_height="wrap_content"
					android:gravity="center" android:textSize="25dp" />

				<TextView android:text="@string/date" android:layout_width="100dip"
					android:layout_height="wrap_content" android:gravity="center"
					android:textSize="25dp" />

				<TextView android:text="@string/description"
					android:layout_width="100dip" android:layout_height="wrap_content"
					android:gravity="center" android:textSize="25dp" />

				<TextView android:layout_width="match_parent"
					android:textSize="25dp" android:layout_height="match_parent"
					android:text="@string/operation" android:gravity="center_horizontal" />

			</LinearLayout>

			<ListView android:id="@+id/bookkeeping_listView"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:drawSelectorOnTop="false">
			</ListView>

		</LinearLayout>
	</HorizontalScrollView>

	<Button android:id="@+id/list_back_btn" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/confirm_no"
		android:layout_gravity="center_horizontal" />
</LinearLayout>
