<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/add_or_modify_user"
			android:layout_width="fill_parent" android:text="@string/add_user_title" android:gravity="center_horizontal"
			android:textSize="30dip" android:layout_height="wrap_content"
			android:paddingTop="10dip" />
	</LinearLayout>
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TableLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/tableLayout_adduser"
			android:stretchColumns="1">
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/user_no" android:id="@+id/user_no"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<EditText android:text="" android:id="@+id/user_no_input"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/tv_password" android:id="@+id/tv_password"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<EditText android:text="" android:id="@+id/tv_password_input"
					android:password="true" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/confrim_password"
					android:id="@+id/confrim_password" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<EditText android:text="" android:id="@+id/confrim_password_input"
					android:password="true" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/user_name" android:id="@+id/user_name"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<EditText android:text="" android:id="@+id/user_name_input"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/user_nickname" android:id="@+id/user_nickname"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<EditText android:text="" android:id="@+id/user_nickname_input"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/gender" android:id="@+id/gender"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_gravity="center_vertical" />
				<RadioGroup android:id="@+id/gender_radio_group"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:orientation="horizontal">
					<RadioButton android:text="@string/male" android:id="@+id/male"
						android:layout_width="wrap_content" android:layout_height="wrap_content" />
					<RadioButton android:text="@string/female" android:id="@+id/female"
						android:layout_width="wrap_content" android:layout_height="wrap_content" />
				</RadioGroup>
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/phone" android:id="@+id/phone"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<EditText android:text="" android:id="@+id/phone_input"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/email" android:id="@+id/email"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<EditText android:text="" android:id="@+id/email_input"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/married" android:id="@+id/married"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<CheckBox android:text="" android:id="@+id/married_check_box"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:text="@string/role" android:id="@+id/role"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_gravity="center_vertical" />
				<Spinner android:id="@+id/role_spinner"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<Button android:text="@string/submit" android:id="@+id/add_user_submit"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<Button android:text="@string/backtomain" android:id="@+id/add_user_backtomain"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</TableRow>
		</TableLayout>
	</ScrollView>
</LinearLayout>
