<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/user_list" android:text="@string/user_list"
			android:layout_width="fill_parent" android:gravity="center_horizontal"
			android:textSize="30dip" android:layout_height="wrap_content"
			android:paddingTop="10dip" />
	</LinearLayout>
	<HorizontalScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_marginBottom="50dip" android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:layout_width="100dip" android:textSize="25dp"
					android:layout_height="match_parent" android:gravity="center"
					android:text="@string/user_no" />

				<TextView android:layout_width="100dip" android:textSize="25dp"
					android:layout_height="match_parent" android:gravity="center"
					android:text="@string/user_name" />

				<TextView android:layout_width="100dip" android:textSize="25dp"
					android:layout_height="match_parent" android:gravity="center"
					android:text="@string/user_nickname" />

				<TextView android:layout_width="100dip" android:textSize="25dp"
					android:layout_height="match_parent" android:gravity="center"
					android:text="@string/role" />

				<TextView android:layout_width="match_parent"
					android:textSize="25dp" android:layout_height="match_parent"
					android:text="@string/operation" android:gravity="center_horizontal" />

			</LinearLayout>

			<ListView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/user_listview" />
		</LinearLayout>

	</HorizontalScrollView>

	<Button android:id="@+id/back_to_inquire_user_btn"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/back_to_inquire" android:layout_gravity="center_horizontal" />
</LinearLayout>
