<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<Button android:id="@+id/add_consumer" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/add_consumer" />

	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:layout_width="100dip" android:textSize="30dp"
			android:layout_height="match_parent" android:gravity="center"
			android:text="@string/consumer_name" />

		<TextView android:layout_width="100dip" android:textSize="30dp"
			android:layout_height="match_parent" android:gravity="center"
			android:text="@string/relationship" />

		<TextView android:layout_width="100dip" android:textSize="30dp"
			android:layout_height="match_parent" android:gravity="center"
			android:text="@string/operation" />

	</LinearLayout>

	<ListView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/consumer_listview" />
</LinearLayout>
