<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/inquire_user" android:text="@string/inquire_user_title"
			android:layout_width="fill_parent" android:gravity="center_horizontal"
			android:textSize="30dip" android:layout_height="wrap_content"
			android:paddingTop="10dip" />
	</LinearLayout>

	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/tableLayout_adduser"
		android:stretchColumns="1">
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/user_no" android:text="@string/user_no"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<EditText android:text="" android:id="@+id/user_no_input"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/user_name" android:text="@string/user_name"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<EditText android:text="" android:id="@+id/user_name_input"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/nick_name" android:text="@string/user_nickname"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<EditText android:text="" android:id="@+id/nick_name_input"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/gender" android:text="@string/gender"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="center_vertical" />

			<Spinner android:id="@+id/gender_spinner"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</TableRow>
	</TableLayout>

	<Button android:id="@+id/inquire_user_btn" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/inquire"
		android:layout_gravity="center_horizontal" />
</LinearLayout>
