<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
 
 	<LinearLayout android:layout_width="fill_parent"
  				android:layout_height="wrap_content">
  		<TextView  android:layout_width="fill_parent" android:textSize="25dip"
  				   android:layout_height="wrap_content"
  				   android:text="@string/data_sync_title"
  				   android:paddingTop="10dip"/>
  	</LinearLayout>
	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/tableLayout1"
		android:stretchColumns="1">
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/sync_item" android:id="@+id/tv_sync_type"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<Spinner android:id="@+id/sync_item" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/spinner_sync_item"/>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:text="@string/start_sync" android:id="@+id/start_sync_btn"
				android:layout_span="2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</TableRow>
	</TableLayout>
</LinearLayout>