<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="vertical">
  	<TextView android:text="@string/add_item_title"
    	android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:textColor="#FFFFFFFF"
		android:gravity="center"
		android:textSize="25px"/>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
		<TextView android:text="@string/item"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textSize="22px"/>
		<EditText
			android:id="@+id/add_item_editText"
			android:layout_marginLeft="10dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
		<Button android:id="@+id/add_item_submit"
			android:layout_marginLeft="50dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/confirm_yes"/>
		<Button android:id="@+id/add_item_cancel"
			android:layout_marginRight="50dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/confirm_no"/>	
	</LinearLayout>
		
</LinearLayout>
